--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     <div class="title-reveal">
                         <h2>About Me</h2>
                     </div>
-                    <p class="about-text">I’m a tech and finance enthusiast —  building with purpose, and growing with intent. Working on real-time projects with a good base in electronics, currently diving into ai/ml and frontend development. Focused on growing my skills and learning new things .</p>
+                    <p class="about-text">I’m a tech and finance enthusiast — building with purpose, and growing with intent. Working on real-time projects with a good base in electronics, currently diving into ai/ml and frontend development. Focused on growing skills and learning new things .</p>
                     <footer>
                         <div class="footer-links">
                             <a href="mailto:sudeepareddy295@gmail.com">Email</a>
