--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A minimalist, single-page portfolio for Sudeepa Reddy.">
-    <title>Sudeepa Reddy's Portfolio</title>
+    <title>Sudeepa Reddy - About me page</title>
 
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 40 40' fill='none'%3E%3Ccircle cx='20' cy='20' r='18' stroke='%23F9F9F9' stroke-width='2'/%3E%3Cpath d='M14 20L20 26L26 20' stroke='%23F9F9F9' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E">
     
